# anki-collection-diff

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: brazil-ddd-codes.toml  traditional-from-simplified.toml
src/anki_collection_diff/: __init__.py  ankiconnect.py  apkg.py  cli.py  config.py  deck_resolver.py  diff.py  snapshots.py  util.py
tests/: test_apkg.py  test_diff.py  test_snapshots.py
